XCom - add BitmapHandler class
etc.

--- a/XCom/XCom.csproj
+++ b/XCom/XCom.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Resources\Images\Collections\SpriteCollectionBase.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Resources\Images\Types\BitmapHandler.cs" />
     <Compile Include="Resources\Images\Types\PckImage.cs">
       <SubType>Code</SubType>
     </Compile>
