--- a/XCom/XCom.csproj
+++ b/XCom/XCom.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Resources\Images\Types\XCImage.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Resources\Map\MapFileError.cs" />
     <Compile Include="Resources\Map\McdRecordFactory.cs" />
     <Compile Include="Resources\Map\RouteData\Link.cs" />
     <Compile Include="Resources\Map\RouteData\RouteNode.cs" />
@@ -207,6 +208,9 @@
     <EmbeddedResource Include="ConsoleForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ConsoleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Map\MapFileError.resx">
+      <DependentUpon>MapFileError.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_Embedded\tftd-battle.pal" />
     <EmbeddedResource Include="_Embedded\tftd-geo.pal" />
