--- a/PckView/PckView.csproj
+++ b/PckView/PckView.csproj
@@ -219,7 +219,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <StartAction>Project</StartAction>
-    <DebugType>None</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
     <DefineConstants>TRACE</DefineConstants>
     <OutputPath>bin\Release\</OutputPath>
