--- a/MapView/MapView.csproj
+++ b/MapView/MapView.csproj
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
     <TargetFrameworkProfile />
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
-    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
