--- a/MapView/_Embedded/MapTilesets.yml
+++ b/MapView/_Embedded/MapTilesets.yml
@@ -3,7 +3,7 @@
 #
 # 'tilesets' - a list that contains all the blocks.
 # 'type'     - the label of MAP/RMP files for the block.
-# 'terrains' - the label(s) of MCD/PCK/TAB files for the block.
+# 'terrains' - the label(s) of PCK/TAB/MCD files for the block.
 # 'category' - a header for the tileset, is arbitrary here.
 # 'group'    - a header for the categories, is arbitrary except that the first
 #              letters designate the game-type and must be either 'ufo' or
