--- a/XCom/XCom.csproj
+++ b/XCom/XCom.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Resources\Map\MapFileWarn.cs" />
     <Compile Include="Resources\Map\McdRecordFactory.cs" />
     <Compile Include="Resources\Map\RouteData\Link.cs" />
+    <Compile Include="Resources\Map\RouteData\RouteCheckInfobox.cs" />
     <Compile Include="Resources\Map\RouteData\RouteNode.cs" />
     <Compile Include="Resources\Map\RouteData\RouteCheckService.cs" />
     <Compile Include="Resources\Map\SpecialType.cs" />
@@ -215,6 +216,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\Map\MapFileWarn.resx">
       <DependentUpon>MapFileWarn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Map\RouteData\RouteCheckInfobox.resx">
+      <DependentUpon>RouteCheckInfobox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="_Embedded\tftd-battle.pal" />
     <EmbeddedResource Include="_Embedded\tftd-geo.pal" />
